fixed some layout issues

--- a/res/css/reset.css
+++ b/res/css/reset.css
@@ -39,7 +39,8 @@ body {
 }
 
 div,article,aside,details,figcaption,figure,
-footer,header,hgroup,menu,nav,section,body,html { 
+footer,header,hgroup,menu,nav,section,body,html,
+h1, h2, h3, h4, h5, h6 { 
     display:block;
 }
 
